xl-demo/templates/global.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xl-demo
---
apiVersion: v1
kind : PersistentVolume
metadata:
  namespace: xl-demo
  name: xl-demo-volume
spec:
  storageClassName: standard
  accessModes:
    - ReadWriteOnce
  capacity:
    storage: 2Gi
  hostPath:
    path: "/home/mount/xl-licenses/"
