xl-demo/templates/artifactory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art-d
  namespace: xl-demo
  labels:
    app: artifactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      containers:
      - image: xebialabsunsupported/docker-artifactory
        name: artifactory
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  namespace: xl-demo
spec:
  selector: 
    app: artifactory
  type: ClusterIP
  ports:
      - port: 8081
