xl-demo/templates/gogs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs-d
  namespace: xl-demo
  labels:
    app: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
      - image: xebialabsunsupported/docker-gogs
        name: gogs
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: xl-demo
spec:
  selector: 
    app: gogs
  type: ClusterIP
  ports:
      - port: 3000
