xl-demo/templates/xld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xld-d
  namespace: xl-demo
  labels:
    app: xld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xld
  template:
    metadata:
      labels:
        app: xld
    spec:
      containers:
      - image: xebialabsunsupported/docker-xld:9.5.1
        name: xld
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        - name: file-volume
          mountPath: /opt/xebialabs/xl-deploy-server/conf/deployit-license.lic
          subPath: ./deployit-license.lic
      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: xld-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: xld
  namespace: xl-demo
spec:
  selector: 
    app: xld
  type: ClusterIP
  ports:
      - port: 4516
