xl-demo/templates/xlr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xlr-d
  namespace: xl-demo
  labels:
    app: xlr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xlr
  template:
    metadata:
      labels:
        app: xlr
    spec:
      containers:
      - image: xebialabsunsupported/docker-xlr:9.5.2
        name: xlr
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        - name: file-volume
          mountPath: /opt/xebialabs/xl-release-server/conf/xl-release-license.lic
          subPath: ./xl-release-license.lic
          readOnly: true
      volumes:
      - name: file-volume
        persistentVolumeClaim:
          claimName: xlr-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: xlr
  namespace: xl-demo
spec:
  selector: 
    app: xlr
  type: ClusterIP
  ports:
      - port: 5516
